[gd_scene load_steps=7 format=3 uid="uid://csv8e76rp6rs3"]

[ext_resource type="Script" uid="uid://ckwt4y1jumdqo" path="res://scenes/cutscene/scr_warstory.gd" id="1_538jo"]
[ext_resource type="Script" uid="uid://dmjhn5qrpt7r4" path="res://code/scr_textbox.gd" id="3_05os5"]
[ext_resource type="Texture2D" uid="uid://d2tuvekb2616g" path="res://sprites/cutscene/warstory/spr_heroes.png" id="3_fmde4"]
[ext_resource type="Script" uid="uid://d374oilx2sent" path="res://code/scr_mus_bar_counter.gd" id="4_5qw33"]
[ext_resource type="Texture2D" uid="uid://dome5ldy8miu0" path="res://sprites/cutscene/warstory/spr_hero.png" id="5_7y3rv"]
[ext_resource type="Script" uid="uid://cwn4t0ihelf1" path="res://code/scr_even_spread.gd" id="5_t1ndu"]

[node name="Warstory" type="Node2D"]
script = ExtResource("1_538jo")

[node name="Background" type="ColorRect" parent="."]
offset_right = 160.0
offset_bottom = 120.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="BarCounter" type="Node" parent="."]
script = ExtResource("4_5qw33")
bpm = 160.0
beats_per_bar = 10

[node name="Images" type="Node2D" parent="."]

[node name="Image1" type="Sprite2D" parent="Images"]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(80, 56)
texture = ExtResource("3_fmde4")

[node name="SpiritMasterDisplay" type="Node2D" parent="Images"]
visible = false
position = Vector2(80, 64)
script = ExtResource("5_t1ndu")
radius = 100.0

[node name="Image2" type="Sprite2D" parent="Images"]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(80, 56)
texture = ExtResource("5_7y3rv")

[node name="BlackBars" type="Node2D" parent="."]

[node name="TopBlackBar" type="ColorRect" parent="BlackBars"]
offset_right = 160.0
offset_bottom = 32.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="BottomBlackBar" type="ColorRect" parent="BlackBars"]
offset_top = 80.0
offset_right = 160.0
offset_bottom = 120.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Textbox" type="RichTextLabel" parent="."]
offset_left = 8.0
offset_top = 82.0
offset_right = 152.0
offset_bottom = 120.0
bbcode_enabled = true
script = ExtResource("3_05os5")

[connection signal="new_bar" from="BarCounter" to="." method="next_bar"]
